feat(sanitizer): add yearCaption and tags sanitizers